[gd_scene load_steps=2 format=3 uid="uid://d3e4f5g6h7i8j"]

[ext_resource type="Script" path="res://RewardScreen.gd" id="1_reward"]

[node name="RewardScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_reward")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 0.9)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 76.0
text = "Victory!"
horizontal_alignment = 1

[node name="RewardContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0

[node name="GoldReward" type="VBoxContainer" parent="RewardContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GoldIcon" type="Label" parent="RewardContainer/GoldReward"]
layout_mode = 2
text = "üí∞"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="RewardContainer/GoldReward"]
layout_mode = 2
text = "25 Gold"
horizontal_alignment = 1

[node name="GoldButton" type="Button" parent="RewardContainer/GoldReward"]
layout_mode = 2
text = "Take Gold"

[node name="CardReward" type="VBoxContainer" parent="RewardContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardIcon" type="Label" parent="RewardContainer/CardReward"]
layout_mode = 2
text = "üÉè"
horizontal_alignment = 1

[node name="CardLabel" type="Label" parent="RewardContainer/CardReward"]
layout_mode = 2
text = "Choose Card"
horizontal_alignment = 1

[node name="CardButton" type="Button" parent="RewardContainer/CardReward"]
layout_mode = 2
text = "View Cards"

[node name="PotionReward" type="VBoxContainer" parent="RewardContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PotionIcon" type="Label" parent="RewardContainer/PotionReward"]
layout_mode = 2
text = "üß™"
horizontal_alignment = 1

[node name="PotionLabel" type="Label" parent="RewardContainer/PotionReward"]
layout_mode = 2
text = "Health Potion"
horizontal_alignment = 1

[node name="PotionButton" type="Button" parent="RewardContainer/PotionReward"]
layout_mode = 2
text = "Take Potion"

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -50.0
text = "Continue" 